<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_sim_2d</name>
  <version>0.0.0</version>
  <description>Simlation of the rigid body dynamics of a simple differential drive USV in 2D, in ROS 2 (Humble)</description>
  <maintainer email="nicoline@finman.dk">Nicoline L. Thomsen</maintainer>
  <license>TODO: license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>aaveq_ros_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
